--- a/src/styles/Experience.module.css
+++ b/src/styles/Experience.module.css
@@ -157,7 +157,7 @@
   flex-direction: column;
   align-items: flex-start;
   font-family: "Josefin Sans", sans-serif;
-  color: #97c7d6;
+  color: #74a8b7;
   border: 6px solid #f3e5b1;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
   position: relative;
